# lmcodec

./: .gitignore  README.md  download_models.py  download_test_data.py  pyproject.toml  requirements.txt  run_experiments.py
examples/: benchmark.py  compress_file.py
src/lmcodec/: __init__.py  arithmetic.py  compressor.py  context.py  decompressor.py  file_format.py  preprocessing.py  utils.py
src/lmcodec/models/: __init__.py  base.py  hf_model.py  registry.py
tests/: test_compression.py  test_smoke.py
