build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "lmcodec"
version = "2.0.0"
description = "Lossless data compression using Large Language Models with arithmetic coding"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["compression", "lossless", "language-models", "arithmetic-coding", "ANS"]
 
dependencies = [
    "torch>=2.0.0",

    "transformers>=4.36.0",

    "constriction>=0.4.0",

    "numpy>=1.24.0",

    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]
 
[project.optional-dependencies]

large-models = [
    "accelerate>=0.26.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "accelerate>=0.26.0",
]
 
[project.scripts]
lmcodec = "lmcodec.__main__:main"
 
[tool.setuptools.packages.find]
where = ["src"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

addopts = "-s -v"
 
[tool.setuptools.package-data]
lmcodec = ["py.typed"]